public/style.css
* {
  box-sizing: border-box;
}

body {
  background-color: #fb6b6b;
}

.root {
  font-family: "Recursive", sans-serif;
  width: 100%;
  height: 100%;
}

.welcomeContainer {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
}
.welcome {
  height: 350px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

.welcome img {
  width: 136px;
  height: 161px;
}

.welcome h1 {
  font-size: 36px;
  font-family: "Righteous", cursive;
  color: #ffffff;
}

.welcome button {
  width: 246px;
  height: 54px;
  background-color: #ffffff;
  border: 1px solid #d70900;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
  border-radius: 5px;

  font-size: 18px;
  color: #d70900;
  font-family: "Recursive", sans-serif;
}

.footer {
  position: fixed;
  bottom: 0;
  height: auto;
  width: 100%;
  background-color: #ffffff;
  box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 25px 15px 15px 15px;
  font-family: "Recursive", sans-serif;
}

.results {
  display: flex;
}

.title {
  font-display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 10px;
}

.response .title {
  text-align: center;
}
.response .title img {
  width: 23px;
  height: 23px;
  margin-right: 8px;
}

.response .title span {
  font-size: 22px;
  font-weight: bold;
}

.response p {
  font-size: 18px;
  margin-bottom: 10px;
}

.topLogo {
  margin: 37px;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}

.topLogo img {
  width: 52px;
  height: 60px;
}

.topLogo span {
  font-size: 36px;
  color: #ffffff;
  font-family: "Righteous", cursive;
}

.question-step1 {
  margin: 37px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 65px;
  background-color: #ffffff;
  padding: 15px;
  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
  border-radius: 5px;
}

.question-step1 h2 {
  color: #333333;
  font-size: 16px;
  font-weight: bold;
}

.question-step2,
.question-step3 {
  margin: 37px;
  height: 131px;
  background-color: #ffffff;
  padding: 15px;
  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
  border-radius: 5px;
  position: relative;
}

.question-step2 p,
.question-step3 p {
  font-size: 18px;
  color: #333333;
}

.question-step2 img {
  width: 30px;
  height: 20px;
  position: absolute;
  bottom: 5%;
  right: 5%;
}

.questions {
  margin-bottom: 200px;
}

.answers {
  width: 90%;
  display: flex;
  justify-content: space-between;
  position: absolute;
  bottom: 5%;
}

.answers > div {
  width: 85px;
  height: 37px;
  font-size: 12px;
  color: #ffffff;
  border-radius: 5px;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.not {
  background-color: #ff3030;
}

.maybe {
  background-color: #ff922e;
}

.yes {
  background-color: #2fbe34;
}

.right h2 {
  text-decoration-line: line-through;
  color: #2fbe34;
}

.doubt h2 {
  text-decoration-line: line-through;
  color: #ff922e;
}

.wrong h2 {
  text-decoration-line: line-through;
  color: #ff3030;
}

.close-circle {
  color: #ff3030;
  font-size: 29px;
}

.help-circle {
  color: #ff922e;
  font-size: 29px;
}

.checkmark-circle {
  color: #2fbe34;
  font-size: 29px;
}

.play-outline {
  font-size: 29px;
}

